--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
     .smile {
       position: absolute;
       bottom: 40px;
-      width: 40px;
-      height: 50px;
-      border-bottom: 4px solid #613b00;
-      border-radius: 0 0 40px 30px;
+      width: 20px;
+      height: 10px;
+      border-bottom: 4px solid #000000;
+      border-radius: 0 0 10px 10px;
     }
 
     @keyframes spin {
